SmartHomeDesktop/include/vpx/vpx_codec.h

    /*!\brief Algorithm return codes */
    typedef enum {
        /*!\brief Operation completed without error */
        VPX_CODEC_OK,

        /*!\brief Unspecified error */
        VPX_CODEC_ERROR,

        /*!\brief Memory operation failed */
        VPX_CODEC_MEM_ERROR,

        /*!\brief ABI version mismatch */
        VPX_CODEC_ABI_MISMATCH,

        /*!\brief Algorithm does not have required capability */
        VPX_CODEC_INCAPABLE,

        /*!\brief The given bitstream is not supported.
         *
         * The bitstream was unable to be parsed at the highest level. The decoder
         * is unable to proceed. This error \ref SHOULD be treated as fatal to the
         * stream. */
        VPX_CODEC_UNSUP_BITSTREAM,

        /*!\brief Encoded bitstream uses an unsupported feature
         *
         * The decoder does not implement a feature required by the encoder. This
         * return code should only be used for features that prevent future
         * pictures from being properly decoded. This error \ref MAY be treated as
         * fatal to the stream or \ref MAY be treated as fatal to the current GOP.
         */
        VPX_CODEC_UNSUP_FEATURE,

        /*!\brief The coded data for this stream is corrupt or incomplete
         *
         * There was a problem decoding the current frame.  This return code
         * should only be used for failures that prevent future pictures from
         * being properly decoded. This error \ref MAY be treated as fatal to the
         * stream or \ref MAY be treated as fatal to the current GOP. If decoding
         * is continued for the current GOP, artifacts may be present.
         */
        VPX_CODEC_CORRUPT_FRAME,

        /*!\brief An application-supplied parameter is not valid.
         *
         */
        VPX_CODEC_INVALID_PARAM,

        /*!\brief An iterator reached the end of list.
         *
         */
        VPX_CODEC_LIST_END

    }
    vpx_codec_err_t;
    /*!\brief Codec interface structure.
     *
     * Contains function pointers and other data private to the codec
     * implementation. This structure is opaque to the application.
     */
    typedef const struct vpx_codec_iface vpx_codec_iface_t;
    /*
     * Library Version Number Interface
     *
     * For example, see the following sample return values:
     *     vpx_codec_version()           (1<<16 | 2<<8 | 3)
     *     vpx_codec_version_str()       "v1.2.3-rc1-16-gec6a1ba"
     *     vpx_codec_version_extra_str() "rc1-16-gec6a1ba"
     */

    /*!\brief Return the version information (as an integer)
     *
     * Returns a packed encoding of the library version number. This will only include
     * the major.minor.patch component of the version number. Note that this encoded
     * value should be accessed through the macros provided, as the encoding may change
     * in the future.
     *
     */
    int vpx_codec_version(void);
    /*!\brief Return the version information (as a string)
     *
     * Returns a printable string containing the full library version number. This may
     * contain additional text following the three digit version number, as to indicate
     * release candidates, prerelease versions, etc.
     *
     */
    const char *vpx_codec_version_str(void);
    /*!\brief Return the version information (as a string)
     *
     * Returns a printable "extra string". This is the component of the string returned
     * by vpx_codec_version_str() following the three digit version number.
     *
     */
    const char *vpx_codec_version_extra_str(void);
    /*!\brief Return the build configuration
     *
     * Returns a printable string containing an encoded version of the build
     * configuration. This may be useful to vpx support.
     *
     */
    const char *vpx_codec_build_config(void);
    /*!\brief Return the name for a given interface
     *
     * Returns a human readable string for name of the given codec interface.
     *
     * \param[in]    iface     Interface pointer
     *
     */
    const char *vpx_codec_iface_name(vpx_codec_iface_t *iface);
    /*!\brief Convert error number to printable string
     *
     * Returns a human readable string for the last error returned by the
     * algorithm. The returned error will be one line and will not contain
     * any newline characters.
     *
     *
     * \param[in]    err     Error number.
     *
     */
    const char *vpx_codec_err_to_string(vpx_codec_err_t  err);