SmartHomeDesktop/include/vpx/vpx_encoder.h

    /*!\brief Current ABI version number
     *
     * \internal
     * If this file is altered in any way that changes the ABI, this value
     * must be bumped.  Examples include, but are not limited to, changing
     * types, removing or reassigning enums, adding/removing/rearranging
     * fields to structures
     */
#define VPX_ENCODER_ABI_VERSION (3 + VPX_CODEC_ABI_VERSION) /**<\hideinitializer*/
#define VPX_EFLAG_FORCE_KF (1<<0)  /**< Force this frame to be a keyframe */
#define VPX_DL_REALTIME     (1)        /**< deadline parameter analogous to