SmartHomeDesktop/src/vpx/VpxLibrary.java

	/// <i>native declaration : vpx\vpx_encoder.h</i>
	public static final int VPX_DL_REALTIME = (int)(1);
	/// <i>native declaration : vpx\vpx_image.h</i>
	public static final int VPX_IMG_FMT_UV_FLIP = (int)512;
	/// <i>native declaration : vpx\vpx_encoder.h</i>
	public static final int VPX_EFLAG_FORCE_KF = (int)(1 << 0);
	/// <i>native declaration : vpx\vp8cx.h</i>
	public static final int VP8_EFLAG_FORCE_ARF = (int)(1 << 24);
	/// <i>native declaration : vpx\vpx_encoder.h</i>
	public static final int VPX_ENCODER_ABI_VERSION = (int)(3 + (2 + (1)));
	/// <i>native declaration : vpx\vpx_image.h</i>
	public static final int PLANE_U = (int)1;
	/// <i>native declaration : vpx\vpx_image.h</i>
	public static final int VPX_IMG_FMT_HAS_ALPHA = (int)1024;
	/// <i>native declaration : vpx\vpx_image.h</i>
	public static final int PLANE_V = (int)2;
	/// <i>native declaration : vpx\vpx_image.h</i>
	public static final int PLANE_Y = (int)0;
	/// <i>native declaration : vpx\vpx_image.h</i>
	public static final int IMG_FMT_HAS_ALPHA = (int)1024;
	/// <i>native declaration : vpx\vpx_decoder.h</i>
	public static final int VPX_CODEC_USE_POSTPROC = (int)65536;
	/// <i>native declaration : vpx\vpx_decoder.h</i>
	public static final int VPX_CODEC_CAP_ERROR_CONCEALMENT = (int)524288;
	/// <i>native declaration : vpx\vpx_codec.h</i>
	public static final int VPX_CODEC_MEM_ZERO = (int)1;
	/// <i>native declaration : vpx\vpx_decoder.h</i>
	public static final int VPX_DECODER_ABI_VERSION = (int)(2 + (2 + (1)));
	/// <i>native declaration : vpx\vpx_image.h</i>
	public static final int PLANE_PACKED = (int)0;
	/**
	 * \brief put frame callback prototype<br>
	 * * This callback is invoked by the decoder to notify the application of<br>
	 * the availability of decoded image data.<br>
	 * <i>native declaration : vpx\vpx_decoder.h</i>
	 */
	/**
	 * \brief put frame callback prototype<br>
	 * * This callback is invoked by the decoder to notify the application of<br>
	 * the availability of decoded image data.<br>
	 * <i>native declaration : vpx\vpx_decoder.h</i>
	 */
	public static abstract class vpx_codec_put_frame_cb_fn_t extends Callback<vpx_codec_put_frame_cb_fn_t > {
		abstract public void apply(Pointer<? > user_priv, Pointer<vpx_image_t > img);
	};
	/**
	 * \brief put slice callback prototype<br>
	 * * This callback is invoked by the decoder to notify the application of<br>
	 * the availability of partially decoded image data. The<br>
	 * <i>native declaration : vpx\vpx_decoder.h</i>
	 */
	/**
	 * \brief put slice callback prototype<br>
	 * * This callback is invoked by the decoder to notify the application of<br>
	 * the availability of partially decoded image data. The<br>
	 * <i>native declaration : vpx\vpx_decoder.h</i>
	 */
	public static abstract class vpx_codec_put_slice_cb_fn_t extends Callback<vpx_codec_put_slice_cb_fn_t > {
		abstract public void apply(Pointer<? > user_priv, Pointer<vpx_image_t > img, Pointer<vpx_image_rect_t > valid, Pointer<vpx_image_rect_t > update);
	};
	/**
	 * \brief Open a descriptor, allocating storage for the underlying image<br>
	 * * Returns a descriptor for storing an image of the given format. The<br>
	 * storage for the descriptor is allocated on the heap.<br>
	 * * \param[in]    img       Pointer to storage for descriptor. If this parameter<br>
	 *                         is NULL, the storage for the descriptor will be<br>
	 *                         allocated on the heap.<br>
	 * \param[in]    fmt       Format for the image<br>
	 * \param[in]    d_w       Width of the image<br>
	 * \param[in]    d_h       Height of the image<br>
	 * \param[in]    align     Alignment, in bytes, of the image buffer and<br>
	 *                         each row in the image(stride).<br>
	 * * \return Returns a pointer to the initialized image descriptor. If the img<br>
	 *         parameter is non-null, the value of the img parameter will be<br>
	 *         returned.<br>
	 * Original signature : <code>vpx_image_t* vpx_img_alloc(vpx_image_t*, vpx_img_fmt_t, unsigned int, unsigned int, unsigned int)</code><br>
	 * <i>native declaration : vpx\vpx_image.h:170</i>
	 */
	synchronized public static Pointer<vpx_image_t > vpx_img_alloc(Pointer<vpx_image_t > img, IntValuedEnum<VpxLibrary.vpx_img_fmt_t > fmt, int d_w, int d_h, int align) {
		return Pointer.pointerToAddress(vpx_img_alloc(Pointer.getPeer(img), (int)fmt.value(), d_w, d_h, align), vpx_image_t.class);
	}
	@Ptr 
	synchronized protected native static long vpx_img_alloc(@Ptr long img, int fmt, int d_w, int d_h, int align);
	/**
	 * \brief Open a descriptor, using existing storage for the underlying image<br>
	 * * Returns a descriptor for storing an image of the given format. The<br>
	 * storage for descriptor has been allocated elsewhere, and a descriptor is<br>
	 * desired to "wrap" that storage.<br>
	 * * \param[in]    img       Pointer to storage for descriptor. If this parameter<br>
	 *                         is NULL, the storage for the descriptor will be<br>
	 *                         allocated on the heap.<br>
	 * \param[in]    fmt       Format for the image<br>
	 * \param[in]    d_w       Width of the image<br>
	 * \param[in]    d_h       Height of the image<br>
	 * \param[in]    align     Alignment, in bytes, of each row in the image.<br>
	 * \param[in]    img_data  Storage to use for the image<br>
	 * * \return Returns a pointer to the initialized image descriptor. If the img<br>
	 *         parameter is non-null, the value of the img parameter will be<br>
	 *         returned.<br>
	 * Original signature : <code>vpx_image_t* vpx_img_wrap(vpx_image_t*, vpx_img_fmt_t, unsigned int, unsigned int, unsigned int, unsigned char*)</code><br>
	 * <i>native declaration : vpx\vpx_image.h:195</i>
	 */
	synchronized public static Pointer<vpx_image_t > vpx_img_wrap(Pointer<vpx_image_t > img, IntValuedEnum<VpxLibrary.vpx_img_fmt_t > fmt, int d_w, int d_h, int align, Pointer<Byte > img_data) {
		return Pointer.pointerToAddress(vpx_img_wrap(Pointer.getPeer(img), (int)fmt.value(), d_w, d_h, align, Pointer.getPeer(img_data)), vpx_image_t.class);
	}
	@Ptr 
	synchronized protected native static long vpx_img_wrap(@Ptr long img, int fmt, int d_w, int d_h, int align, @Ptr long img_data);
	/**
	 * \brief Set the rectangle identifying the displayed portion of the image<br>
	 * * Updates the displayed rectangle (aka viewport) on the image surface to<br>
	 * match the specified coordinates and size.<br>
	 * * \param[in]    img       Image descriptor<br>
	 * \param[in]    x         leftmost column<br>
	 * \param[in]    y         topmost row<br>
	 * \param[in]    w         width<br>
	 * \param[in]    h         height<br>
	 * * \return 0 if the requested rectangle is valid, nonzero otherwise.<br>
	 * Original signature : <code>int vpx_img_set_rect(vpx_image_t*, unsigned int, unsigned int, unsigned int, unsigned int)</code><br>
	 * <i>native declaration : vpx\vpx_image.h:216</i>
	 */
	synchronized public static int vpx_img_set_rect(Pointer<vpx_image_t > img, int x, int y, int w, int h) {
		return vpx_img_set_rect(Pointer.getPeer(img), x, y, w, h);
	}
	synchronized protected native static int vpx_img_set_rect(@Ptr long img, int x, int y, int w, int h);
	/**
	 * \brief Flip the image vertically (top for bottom)<br>
	 * * Adjusts the image descriptor's pointers and strides to make the image<br>
	 * be referenced upside-down.<br>
	 * * \param[in]    img       Image descriptor<br>
	 * Original signature : <code>void vpx_img_flip(vpx_image_t*)</code><br>
	 * <i>native declaration : vpx\vpx_image.h:230</i>
	 */
	synchronized public static void vpx_img_flip(Pointer<vpx_image_t > img) {
		vpx_img_flip(Pointer.getPeer(img));
	}
	synchronized protected native static void vpx_img_flip(@Ptr long img);
	/**
	 * \brief Close an image descriptor<br>
	 * * Frees all allocated storage associated with an image descriptor.<br>
	 * * \param[in]    img       Image descriptor<br>
	 * Original signature : <code>void vpx_img_free(vpx_image_t*)</code><br>
	 * <i>native declaration : vpx\vpx_image.h:238</i>
	 */
	synchronized public static void vpx_img_free(Pointer<vpx_image_t > img) {
		vpx_img_free(Pointer.getPeer(img));
	}
	synchronized protected native static void vpx_img_free(@Ptr long img);
	/**
	 * \brief Return the version information (as an integer)<br>
	 * * Returns a packed encoding of the library version number. This will only include<br>
	 * the major.minor.patch component of the version number. Note that this encoded<br>
	 * value should be accessed through the macros provided, as the encoding may change<br>
	 * in the future.<br>
	 * Original signature : <code>int vpx_codec_version()</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:225</i>
	 */
	synchronized native public static int vpx_codec_version();
	/**
	 * \brief Return the version information (as a string)<br>
	 * * Returns a printable string containing the full library version number. This may<br>
	 * contain additional text following the three digit version number, as to indicate<br>
	 * release candidates, prerelease versions, etc.<br>
	 * Original signature : <code>char* vpx_codec_version_str()</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:247</i>
	 */
	synchronized public static Pointer<Byte > vpx_codec_version_str() {
		return Pointer.pointerToAddress(vpx_codec_version_str$2(), Byte.class);
	}
	@Ptr 
	@Name("vpx_codec_version_str") 
	synchronized protected native static long vpx_codec_version_str$2();
	/**
	 * \brief Return the version information (as a string)<br>
	 * * Returns a printable "extra string". This is the component of the string returned<br>
	 * by vpx_codec_version_str() following the three digit version number.<br>
	 * Original signature : <code>char* vpx_codec_version_extra_str()</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:256</i>
	 */
	synchronized public static Pointer<Byte > vpx_codec_version_extra_str() {
		return Pointer.pointerToAddress(vpx_codec_version_extra_str$2(), Byte.class);
	}
	@Ptr 
	@Name("vpx_codec_version_extra_str") 
	synchronized protected native static long vpx_codec_version_extra_str$2();
	/**
	 * \brief Return the build configuration<br>
	 * * Returns a printable string containing an encoded version of the build<br>
	 * configuration. This may be useful to vpx support.<br>
	 * Original signature : <code>char* vpx_codec_build_config()</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:265</i>
	 */
	synchronized public static Pointer<Byte > vpx_codec_build_config() {
		return Pointer.pointerToAddress(vpx_codec_build_config$2(), Byte.class);
	}
	@Ptr 
	@Name("vpx_codec_build_config") 
	synchronized protected native static long vpx_codec_build_config$2();
	/**
	 * \brief Return the name for a given interface<br>
	 * * Returns a human readable string for name of the given codec interface.<br>
	 * * \param[in]    iface     Interface pointer<br>
	 * Original signature : <code>char* vpx_codec_iface_name(vpx_codec_iface_t*)</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:275</i>
	 */
	synchronized public static Pointer<Byte > vpx_codec_iface_name(Pointer<VpxLibrary.vpx_codec_iface > iface) {
		return Pointer.pointerToAddress(vpx_codec_iface_name(Pointer.getPeer(iface)), Byte.class);
	}
	@Ptr 
	synchronized protected native static long vpx_codec_iface_name(@Ptr long iface);
	/**
	 * \brief Convert error number to printable string<br>
	 * * Returns a human readable string for the last error returned by the<br>
	 * algorithm. The returned error will be one line and will not contain<br>
	 * any newline characters.<br>
	 * *<br>
	 * \param[in]    err     Error number.<br>
	 * Original signature : <code>char* vpx_codec_err_to_string(vpx_codec_err_t)</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:288</i>
	 */
	synchronized public static Pointer<Byte > vpx_codec_err_to_string(IntValuedEnum<VpxLibrary.vpx_codec_err_t > err) {
		return Pointer.pointerToAddress(vpx_codec_err_to_string((int)err.value()), Byte.class);
	}
